--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
   <script data-require="angular.js@1.3.10" data-semver="1.3.10" src="https://code.angularjs.org/1.3.10/angular.js"></script>
 </head>
 <body>
+  <section>
+    <img src="img/mad-lib-happy-face.png" alt="Mad Lib Happy Face" class="smiley">
+    <img src="img/ng-mad-libs-logo.png" alt="Mad Lib Logo" class="logo">
+    <p>Please provide the following words:</p>
+    <input type="text" ng-init="femaleName='Female Name'" ng-model="femaleName" />
+    <input type="text" ng-init="jobTitle='Job Title'" ng-model="jobTitle" />
+    <input type="text" ng-init="tediousTask='Tedious Task'" ng-model="tediousTask" />
+    <input type="text" ng-init="dirtyTask='Dirty Task'" ng-model="dirtyTask" />
+    <input type="text" ng-init="celebrity='Celebrity'" ng-model="celebrity" />
+    <input type="text" ng-init="uselessSkill='Useless Skill'" ng-model="uselessSkill" />
+    <input type="text" ng-init="adjective='Adjective'" ng-model="adjective" />
+    <input type="text" ng-init="obnoxiuousCelebrity='Obnoxiuous Celebrity'" ng-model="obnoxiuousCelebrity" />
+    <input type="text" ng-init="hugeNumber='Huge Number'" ng-model="hugeNumber" />
 
-  <p>Please provide the following words:</p>
-  <input type="text" ng-model="female-name" />
-  <input type="text" ng-model="job-title" />
-  <input type="text" ng-model="tedious-task" />
-  <input type="text" ng-model="dirty-task" />
-  <input type="text" ng-model="celebrity" />
-  <input type="text" ng-model="useless-skill" />
-  <input type="text" ng-model="adjective" />
-  <input type="text" ng-model="obnoxiuous-celebrity" />
-  <input type="text" ng-model="huge-number" />
+    <hr>
 
-  <p>
-    {{female-name}} was a {{job-title}} who loved technology. Although she loved parts of her job, she absolutely hated  {{tedious-task}} and {{dirty-task}}. So, {{female-name}} met with her life mentor {{celebrity}} who told her to learn how to {{useless-skill}} with Thinkful. Thinkful didn't offer a course on {{useless-skill}} so she studied programming instead.
-
-    What a great decision! With her new skills, {{female-name}} built a(n) {{adjective}} robot named {{obnoxiuous-celebrity}} that not only loved {{dirty-task}} but did it {{huge-number}} times faster.
-  </p>
-
+    <p>
+      <span>{{femaleName}}</span> was a <span>{{jobTitle}}</span> who loved technology. Although she loved parts of her job, she absolutely hated  <span>{{tediousTask}}</span> and <span>{{dirtyTask}}</span>. So, <span>{{femaleName}}</span> met with her life mentor <span>{{celebrity}}</span> who told her to learn how to <span>{{uselessSkill}}</span> with Thinkful. Thinkful didn't offer a course on <span>{{uselessSkill}}</span> so she studied programming instead.
+    </p>
+    <p>
+      What a great decision! With her new skills, <span>{{femaleName}}</span> built a(n) <span>{{adjective}}</span> robot named <span>{{obnoxiuousCelebrity}}</span> that not only loved <span>{{dirtyTask}}</span> but did it <span>{{hugeNumber}}</span> times faster.
+    </p>
+  </section>
 
 </body>
 </html>
