--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Angular Mad Libs!</title>
   <link rel="stylesheet" href="css/main.css">
   <script data-require="angular.js@1.3.10" data-semver="1.3.10" src="https://code.angularjs.org/1.3.10/angular.js"></script>
+  <script src="https://code.angularjs.org/1.3.10/angular-messages.min.js"></script>
   <script src="js/madLib.js"></script>
 </head>
 <body>
@@ -18,59 +19,61 @@
         <input type="radio" ng-model="gender" ng-click="male()" value="male">Male</input>
         <input type="radio" ng-model="gender" ng-click="female()" value="female">Female</input>
         <p>Please provide the following words:</p>
-        <table>
-          <tbody>
-            <tr>
-              <td>Name:</td>
-              <td><input type="text" ng-model="name" /></td>
-            </tr>
-            <tr>
-              <td>Job Title:</td>
-              <td><input type="text" ng-model="jobTitle" /></td>
-            </tr>
-            <tr>
-              <td>Tedious Task:</td>
-              <td><input type="text" ng-model="tediousTask" /></td>
-            </tr>
-            <tr>
-              <td>Dirty Task:</td>
-              <td><input type="text" ng-model="dirtyTask" /></td>
-            </tr>
-            <tr>
-              <td>Celebrity:</td>
-              <td><input type="text" ng-model="celebrity" /></td>
-            </tr>
-            <tr>
-              <td>Useless Skill:</td>
-              <td><input type="text" ng-model="uselessSkill" /></td>
-            </tr>
-            <tr>
-              <td>Adjective:</td>
-              <td><input type="text" ng-model="adjective" /></td>
-            </tr>
-            <tr>
-              <td>Obnoxiuous Celebrity:</td>
-              <td><input type="text" ng-model="obnoxiuousCelebrity" /></td>
-            </tr>
-            <tr>
-              <td>Huge Number:</td>
-              <td><input type="number" ng-model="hugeNumber" /></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td><button ng-click="switch()">SUBMIT</button></td>
-            </tr>
-          </tbody>
-        </table>
+        <form name="userSubmit" ng-submit="submit()">
+          <table>
+            <tbody>
+              <tr>
+                <td>Name:</td>
+                <td><input type="text" name="name" ng-model="data.name" required/></td>
+              </tr>
+              <tr>
+                <td>Job Title:</td>
+                <td><input type="text" name="jobTitle" ng-model="data.jobTitle" required/></td>
+              </tr>
+              <tr>
+                <td>Tedious Task:</td>
+                <td><input type="text" name="tediousTask" ng-model="data.tediousTask" required/></td>
+              </tr>
+              <tr>
+                <td>Dirty Task:</td>
+                <td><input type="text" name="dirtyTask" ng-model="data.dirtyTask" required/></td>
+              </tr>
+              <tr>
+                <td>Celebrity:</td>
+                <td><input type="text" name="dirtyTask" ng-model="data.celebrity" required/></td>
+              </tr>
+              <tr>
+                <td>Useless Skill:</td>
+                <td><input type="text" name="uselessSkill" ng-model="data.uselessSkill" required/></td>
+              </tr>
+              <tr>
+                <td>Adjective:</td>
+                <td><input type="text" name="adjective" ng-model="data.adjective" required/></td>
+              </tr>
+              <tr>
+                <td>Obnoxiuous Celebrity:</td>
+                <td><input type="text" name="obnoxiuousCelebrity" ng-model="data.obnoxiuousCelebrity" required/></td>
+              </tr>
+              <tr>
+                <td>Huge Number:</td>
+                <td><input type="number" name="hugeNumber" ng-model="data.hugeNumber" required/></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td><button type="submit">SUBMIT</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </form>
       </div>
       <div class="output {{outputVisable}}">
         <p>
-          <span>{{name}}</span> was a <span>{{jobTitle}}</span> who loved technology. Although {{heShe}} loved parts of {{himHer}} job, {{heShe}} absolutely hated  <span>{{tediousTask}}</span> and <span>{{dirtyTask}}</span>. So, <span>{{name}}</span> met with {{himHer}} life mentor <span>{{celebrity}}</span> who told {{himHer}} to learn how to <span>{{uselessSkill}}</span> with Thinkful. Thinkful didn't offer a course on <span>{{uselessSkill}}</span> so {{heShe}} studied programming instead.
+          <span>{{data.name}}</span> was a <span>{{data.jobTitle}}</span> who loved technology. Although {{heShe}} loved parts of {{himHer}} job, {{heShe}} absolutely hated  <span>{{data.tediousTask}}</span> and <span>{{data.dirtyTask}}</span>. So, <span>{{data.name}}</span> met with {{himHer}} life mentor <span>{{data.celebrity}}</span> who told {{himHer}} to learn how to <span>{{data.uselessSkill}}</span> with Thinkful. Thinkful didn't offer a course on <span>{{data.uselessSkill}}</span> so {{heShe}} studied programming instead.
         </p>
         <p>
-          What a great decision! With {{himHer}} new skills, <span>{{name}}</span> built a(n) <span>{{adjective}}</span> robot named <span>{{obnoxiuousCelebrity}}</span> that not only loved <span>{{dirtyTask}}</span> but did it <span>{{hugeNumber}}</span> times faster.
+          What a great decision! With {{himHer}} new skills, <span>{{data.name}}</span> built a(n) <span>{{data.adjective}}</span> robot named <span>{{data.obnoxiuousCelebrity}}</span> that not only loved <span>{{data.dirtyTask}}</span> but did it <span>{{data.hugeNumber}}</span> times faster.
         </p>
-        <button ng-click="switch()">RESET</button>
+        <button ng-click="reset()">RESET</button>
       </div>
     </div>
   </section>
